# KU-tasks-projects

./: .gitignore  README.md  test.dot
3rd Sem - COMP 202/1-Stack/: Stack.cpp
3rd Sem - COMP 202/2-Queue/: Queue.cpp
3rd Sem - COMP 202/7-Binary_Tree_as_Linked_LIst/: LinkedBST.cpp
3rd Sem - COMP 202/KUCE2018_MP_36_45/: pretopost.cpp
3rdSem-COMP202/1-Stack/: stack.h
3rdSem-COMP202/2-Queue/: Queue.h
3rdSem-COMP202/3-Linked_List/: ll.cpp
3rdSem-COMP202/4-Linked_List_as_Stack/: StackLL.h
3rdSem-COMP202/5-Linked_List_as_Queue/: QueueLL.cpp
3rdSem-COMP202/6-Binary_Tree_as_Array/: sambeg.txt
3rdSem-COMP202/7-Binary_Tree_as_Linked_LIst/: BST.h
4th Sem - COMP 204/: packet1.pkt
5th Sem - COMP 301/: lab1.pl
5thSem-COMP301/: lab2.pl  lab3.pl  lab5.lisp
6th Sem - COMP 314/: README.md
6th Sem - COMP 342/: README.md
7th Sem - COMP 472/: cannibal_missionary_ss.py  pyproject.toml
7th Sem - COMP 472/ai_mini_project/: medical_ner.py
7th Sem - COMP 472/ai_mini_project/notebooks/: medical_ner.ipynb
7th Sem - COMP 472/cannibal_missionary/: cannibal_missionary_ss.py  pyproject.toml
7th Sem - COMP 482/data_viz_dashboard/: pyproject.toml
7th Sem - COMP 482/data_viz_dashboard/dashboard/: app.py  components.py
7th Sem - COMP 482/data_viz_dashboard/notebooks/: dashboard.ipynb  data-processing.ipynb
7thSem-COMP409/term_project_SLR_parser/: pyproject.toml
7thSem-COMP409/term_project_SLR_parser/slr/: slr_parser.py
7thSem-COMP409/term_project_SLR_parser/templates/: index.html
COMP 204 - 4th Sem/: 2.pkt  vlan.pkt
COMP 301 - 5th Sem/: lab4.pl
COMP 306 - 6th Sem/: README.md
(+186 files in other folders)
