[tool.poetry]
name = "7th sem - comp 472"
version = "0.1.0"
description = "COMP472 (AI) coursework"
authors = ["Sambeg Shrestha <sthasam2@gmail.com>"]
license = "GNU v.3"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.5"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
