[tool.poetry]
name = "slr backend"
version = "0.1.0"
description = ""
authors = ["Sambeg Shrestha <sthasam2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
graphviz = "^0.20.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
